backend/python/3f-lifecycle-report.txt
+ trap preserve_failure_trace EXIT
+ cd /home/runner/work/finance-app/finance-app/backend/python
+ uv run python scripts/fix_implement_3f_temp.py
+ uv run python scripts/implement_3f_temp.py
Step 3F source changes staged.
+ uv run ruff check . --fix
Found 2 errors (2 fixed, 0 remaining).
+ uv run ruff format .
6 files reformatted, 71 files left unchanged
+ cd /home/runner/work/finance-app/finance-app
+ npx prisma format
Loaded Prisma config from prisma.config.ts.

Prisma schema loaded from prisma/schema.prisma
┌─────────────────────────────────────────────────────────┐
│  Update available 6.19.3 -> 7.8.0                       │
│                                                         │
│  This is a major update - please follow the guide at    │
│  https://pris.ly/d/major-version-upgrade                │
│                                                         │
│  Run the following to update                            │
│    npm i --save-dev prisma@latest                       │
│    npm i @prisma/client@latest                          │
└─────────────────────────────────────────────────────────┘
Formatted prisma/schema.prisma in 99ms 🚀
+ npx prettier --write .github/workflows/database-schema.yml
[90m.github/workflows/database-schema.yml[39m 39ms (unchanged)
+ cd /home/runner/work/finance-app/finance-app/backend/python
+ python -
+ psql --set=ON_ERROR_STOP=1 --dbname=postgresql://postgres:postgres@localhost:5432/finance_app --file=.bootstrap-3f.sql
SET
SET
SET
SET
SET
 set_config 
------------
 
(1 row)

SET
SET
SET
SET
COMMENT
CREATE TYPE
CREATE TYPE
CREATE TYPE
CREATE TYPE
CREATE TYPE
CREATE TYPE
CREATE TYPE
CREATE TYPE
CREATE TYPE
CREATE TYPE
CREATE TYPE
CREATE TYPE
CREATE TYPE
CREATE TYPE
CREATE TYPE
CREATE TYPE
CREATE TYPE
CREATE TYPE
CREATE TYPE
CREATE TYPE
CREATE TYPE
CREATE TYPE
CREATE TYPE
CREATE TYPE
CREATE TYPE
CREATE TYPE
CREATE TYPE
SET
SET
CREATE TABLE
CREATE TABLE
CREATE TABLE
CREATE TABLE
CREATE TABLE
CREATE TABLE
CREATE TABLE
CREATE TABLE
CREATE TABLE
CREATE TABLE
CREATE TABLE
CREATE TABLE
CREATE TABLE
CREATE TABLE
CREATE TABLE
CREATE TABLE
CREATE TABLE
CREATE TABLE
CREATE TABLE
CREATE TABLE
CREATE TABLE
CREATE TABLE
CREATE TABLE
CREATE TABLE
CREATE TABLE
CREATE TABLE
CREATE TABLE
CREATE TABLE
CREATE TABLE
CREATE TABLE
ALTER TABLE
ALTER TABLE
ALTER TABLE
ALTER TABLE
ALTER TABLE
ALTER TABLE
ALTER TABLE
ALTER TABLE
ALTER TABLE
ALTER TABLE
ALTER TABLE
ALTER TABLE
ALTER TABLE
ALTER TABLE
ALTER TABLE
ALTER TABLE
ALTER TABLE
ALTER TABLE
ALTER TABLE
ALTER TABLE
ALTER TABLE
ALTER TABLE
ALTER TABLE
ALTER TABLE
ALTER TABLE
ALTER TABLE
ALTER TABLE
ALTER TABLE
ALTER TABLE
ALTER TABLE
CREATE INDEX
CREATE INDEX
CREATE INDEX
CREATE INDEX
CREATE INDEX
CREATE INDEX
CREATE INDEX
CREATE INDEX
CREATE INDEX
CREATE INDEX
CREATE INDEX
CREATE INDEX
CREATE INDEX
CREATE INDEX
CREATE INDEX
CREATE INDEX
CREATE INDEX
CREATE INDEX
CREATE INDEX
CREATE INDEX
CREATE INDEX
CREATE INDEX
CREATE INDEX
CREATE INDEX
CREATE INDEX
CREATE INDEX
CREATE INDEX
CREATE INDEX
CREATE INDEX
CREATE INDEX
CREATE INDEX
CREATE INDEX
CREATE INDEX
CREATE INDEX
CREATE INDEX
CREATE INDEX
CREATE INDEX
CREATE INDEX
CREATE INDEX
CREATE INDEX
CREATE INDEX
CREATE INDEX
CREATE INDEX
CREATE INDEX
CREATE INDEX
CREATE INDEX
CREATE INDEX
CREATE INDEX
CREATE INDEX
CREATE INDEX
CREATE INDEX
CREATE INDEX
CREATE INDEX
CREATE INDEX
CREATE INDEX
CREATE INDEX
CREATE INDEX
CREATE INDEX
CREATE INDEX
CREATE INDEX
CREATE INDEX
CREATE INDEX
CREATE INDEX
CREATE INDEX
CREATE INDEX
CREATE INDEX
CREATE INDEX
CREATE INDEX
CREATE INDEX
CREATE INDEX
CREATE INDEX
CREATE INDEX
CREATE INDEX
CREATE INDEX
CREATE INDEX
CREATE INDEX
CREATE INDEX
CREATE INDEX
CREATE INDEX
CREATE INDEX
CREATE INDEX
CREATE INDEX
CREATE INDEX
CREATE INDEX
CREATE INDEX
ALTER TABLE
ALTER TABLE
ALTER TABLE
ALTER TABLE
ALTER TABLE
ALTER TABLE
ALTER TABLE
ALTER TABLE
ALTER TABLE
ALTER TABLE
ALTER TABLE
ALTER TABLE
ALTER TABLE
ALTER TABLE
ALTER TABLE
ALTER TABLE
ALTER TABLE
ALTER TABLE
ALTER TABLE
ALTER TABLE
ALTER TABLE
ALTER TABLE
ALTER TABLE
ALTER TABLE
ALTER TABLE
ALTER TABLE
ALTER TABLE
ALTER TABLE
ALTER TABLE
ALTER TABLE
ALTER TABLE
ALTER TABLE
ALTER TABLE
ALTER TABLE
ALTER TABLE
ALTER TABLE
ALTER TABLE
ALTER TABLE
ALTER TABLE
ALTER TABLE
ALTER TABLE
ALTER TABLE
ALTER TABLE
ALTER TABLE
ALTER TABLE
ALTER TABLE
+ rm .bootstrap-3f.sql
+ uv run alembic -c alembic.ini stamp 3d0001base
+ uv run alembic -c alembic.ini upgrade head
+ uv run python scripts/database_schema.py --write --revision 3f0001acctnote
Wrote database schema artifact to /home/runner/work/finance-app/finance-app/backend/python/database/revisions/3f0001acctnote/schema.sql.
+ uv run python scripts/database_schema.py --check --revision 3f0001acctnote
Database schema matches the committed baseline.
+ uv run python scripts/sqlalchemy_schema.py --check
SQLAlchemy metadata matches the Prisma-migrated PostgreSQL schema.
+ uv run alembic -c alembic.ini check
No new upgrade operations detected.
+ cd /home/runner/work/finance-app/finance-app
+ dropdb --host localhost --username postgres --force finance_app
+ createdb --host localhost --username postgres finance_app
+ ALLOW_FROZEN_PRISMA_ARCHIVE_DEPLOY=1
+ npm run db:prisma:archive:verify

> finance-app@0.1.0 db:prisma:archive:verify
> node scripts/prisma-archive-verify.mjs

Database migration archive-target-check completed successfully.
Loaded Prisma config from prisma.config.ts.

Prisma config detected, skipping environment variable loading.
Prisma schema loaded from prisma/schema.prisma
Datasource "db": PostgreSQL database "finance_app", schema "public" at "localhost:5432"

3 migrations found in prisma/migrations

Applying migration `20260523000000_init`
Applying migration `20260709000000_listing_identity`
Applying migration `20260710000000_snapshot_currency_breakdowns`

The following migration(s) have been applied:

migrations/
  └─ 20260523000000_init/
    └─ migration.sql
  └─ 20260709000000_listing_identity/
    └─ migration.sql
  └─ 20260710000000_snapshot_currency_breakdowns/
    └─ migration.sql
      
All migrations have been successfully applied.
+ cd /home/runner/work/finance-app/finance-app/backend/python
+ uv run ruff check .
All checks passed!
+ uv run ruff format --check .
77 files already formatted
+ uv run mypy app scripts tests
scripts/migration_policy.py:19: error: Cannot find implementation or library
stub for module named "database_schema"  [import-not-found]
        import database_schema
        ^
scripts/migration_policy.py:19: note: See https://mypy.readthedocs.io/en/stable/running_mypy.html#missing-imports
scripts/migration_policy.py:19: error: Name "database_schema" already defined
(by an import)  [no-redef]
        import database_schema
        ^~~~~~~~~~~~~~~~~~~~~~
Found 2 errors in 1 file (checked 73 source files)
+ preserve_failure_trace
+ local status=1
+ [[ 1 -eq 0 ]]
+ set +e
+ cd /home/runner/work/finance-app/finance-app
+ git reset --hard HEAD
HEAD is now at d2f558c chore: remove resolved 3F lifecycle report
+ cp /tmp/3f-lifecycle-report.txt backend/python/3f-lifecycle-report.txt

exit_status=1
